--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./src/server.js",
-    "start": "nodemon ./src/server.js"
+    "dev": "nodemon ./src/server/server.js",
+    "start": "nodemon ./src/server/server.js"
   },
   "dependencies": {
     "@hapi/hapi": "^21.3.9",
-    "@prisma/client": "^5.15.0"
+    "@prisma/client": "^5.15.0",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.4.0",
