--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
     "slugify": "^1.6.6"
   },
   "devDependencies": {
+    "@stylistic/eslint-plugin-js": "^2.1.0",
     "@eslint/js": "^9.4.0",
-    "@stylistic/eslint-plugin": "^2.1.0",
-    "eslint": "^9.4.0",
     "globals": "^15.3.0",
     "nodemon": "^3.1.3",
     "prisma": "^5.15.0"
