--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   "dependencies": {
     "@hapi/hapi": "^21.3.9",
     "@prisma/client": "^5.15.0",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "prisma": "^5.15.0"
   },
   "devDependencies": {
     "@stylistic/eslint-plugin-js": "^2.1.0",
     "@eslint/js": "^9.4.0",
     "globals": "^15.3.0",
-    "nodemon": "^3.1.3",
-    "prisma": "^5.15.0"
+    "nodemon": "^3.1.3"
   }
 }
