Multiple changes, add auth API MVP

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
+NODE_ENV=development
+
 DATABASE_URL="file:./dev.db"
 ML_API_URL="http://localhost:5000"
-
 GCS_BUCKET="waterwise-dev"
-GEOCODING_API_KEY=""
+
+SECRET_KEY=change_this_key
+GEOCODING_API_KEY=
