--- a/package.json
+++ b/package.json
@@ -4,14 +4,22 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./src/server/server.js",
-    "start": "nodemon ./src/server/server.js"
+    "start": "nodemon ./src/server/server.js",
+    "generate": "prisma generate --schema prisma/schema-postgres.prisma",
+    "generate:sqlite": "prisma generate --schema prisma/schema-sqlite.prisma",
+    "migrate-dev": "prisma migrate dev --schema prisma/schema-postgres.prisma",
+    "migrate-dev:sqlite": "prisma migrate dev --schema prisma/schema-sqlite.prisma"
   },
   "dependencies": {
     "@google-cloud/storage": "^7.11.2",
     "@googlemaps/google-maps-services-js": "^3.4.0",
     "@hapi/hapi": "^21.3.9",
     "@prisma/client": "^5.15.0",
+    "core-js": "^3.37.1",
+    "file-type": "^19.0.0",
     "firebase-admin": "^12.1.1",
+    "hasha": "^6.0.0",
+    "jose": "^5.4.0",
     "prisma": "^5.15.0",
     "slugify": "^1.6.6"
   },
