Progress as of 16/06/2024

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 NODE_ENV=development
 
-DATABASE_URL="file:./dev.db"
+DATABASE_URL="postgresql://username:password@localhost:5432/database-name"
 ML_API_URL="http://localhost:5000"
 GCS_BUCKET="waterwise-dev"
 
