--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,5 @@ ML_API_URL="http://localhost:5000"
 GCS_BUCKET="waterwise-dev"
 
 SECRET_KEY=change_this_key
+GOOGLE_APPLICATION_CREDENTIALS=service-account-key.json
 GEOCODING_API_KEY=
